<resources>
    <!--메인 메뉴-->
    <string name="app_name">TestApp</string>
    <string name="message">메시지보내기</string>
    <string name="new_activity">미세먼지농도</string>
    <string name="image_grid">이미지그리드</string>
    <string name="check_service">서비스확인</string>
    <string name="map">구글 맵</string>

    <!--미세먼지-->
    <string name="g1">좋음</string>
    <string name="g2">보통</string>
    <string name="g3">나쁨</string>
    <string name="g4">매우나쁨</string>
    <string name="g_error">알수없음</string>
    <string name="pm_unit">㎍/㎥</string>
    <string name="notice_dust">서울 시내 미세먼지를 조회하는 화면입니다</string>

    <string name="error_location">충전소 위치 정보를 알 수 없습니다</string>
    <string name="time">측정 일시 : </string>
    <string name="num_pm10">pm10 수치 : </string>
    <string name="num_pm25">pm2.5 수치 : </string>
    <string name="grade_pm10">pm10 등급 : </string>
    <string name="grade_pm25">pm2.5 등급 : </string>
    <string name="reload">다시 불러오기</string>

    <!--common-->
    <string name="no_more_contents">목록의 마지막입니다</string>


    <string name="start_service">서비스시작</string>
    <string name="stop_service">서비스종료</string>
    <string name="getdata_from_service">서비스에서 데이터 확인</string>
    <string name="lifecycle_service">서비스 생명주기</string>

    <string name="google_doc_service">Android Service 공식 문서 보러가기</string>
    <string name="notification_title">알림</string>
    <string name="notification_message">음악 재생 중</string>

</resources>
