<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kt.testapp.activity.MainActivity">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/start_service"
            />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/btn_1"
            android:minWidth="100dp"
            android:text="@string/stop_service"
            />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/btn_2"
            android:minWidth="100dp"
            android:text="@string/getdata_from_service"
            />

        <TextView
            android:id="@+id/title"
            android:layout_below="@id/btn_3"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:text="@string/lifecycle_service"/>
        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/service"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/title"
            android:scaleType="fitXY"/>


        <TextView
            android:id="@+id/doc"
            android:layout_below="@id/img"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:text="@string/google_doc_service"/>



</RelativeLayout>
